--- a/index.html
+++ b/index.html
@@ -7,5 +7,20 @@
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
+    <section class="wrapper">
+      <div class="section-letter">
+        <img src="images/dragon-letter.svg" alt="">
+      </div>
+
+      <div class="section-icon">
+        <img src="images/dragon.svg" alt="">
+      </div>
+
+      <div class="section-body">
+        <h2>Dragon</h2>
+        <p>Magnanimous, stately, vigorous, strong, proud, noble, direct, dignified, passionate.</p>
+      </div>
+    </section>
+
   </body>
 </html>
