removed body margin

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <section class="wrapper">
-      <div class="section-letter">
-        <img src="images/dragon-letter.svg" alt="">
+      <div class="img-flex">
+        <img class="section-letter" src="images/dragon-letter.svg" alt="">
       </div>
 
-      <div class="section-icon">
-        <img src="images/dragon.svg" alt="">
+      <div class="img-flex">
+        <img class="section-icon" src="images/dragon.svg" alt="">
       </div>
 
       <div class="section-body">
